[tool.poetry]
name = "toggl-csv-to-text"
version = "0.1.0"
description = ""
authors = ["Hiroto Hasegawa <hiroto.hasegawa.0828@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
yapf = "^0.31.0"
flake8 = "^3.9.2"
mypy = "^0.812"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
